// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 1`] = `
"Usage
  explodex [GLOBAL OPTIONS] <GROUP> <COMMAND> [ARGUMENTS] [OPTIONS]
  explodex help [GROUP [COMMAND ...]]

Description
  Explodex manages trusted plugins for the installed read-only
  /Applications/ChatGPT.app with bounded one-shot operations.

  Explodex runs no daemon and never automatically restarts, reloads,
  navigates, closes, or stops an existing authoring main.

Groups
  host            Read-only ChatGPT.app identity and host evidence.
  compatibility   Exact compatibility key status and isolated proof.
  main            Authoring-main classification, launch, attach, and final apply.
  plugin          Plugin authoring, artifacts, lifecycle, and registry operations.
  dev             One persistent isolated development instance on 127.0.0.1:9444.
  legacy          Legacy doctor and exact itemized cleanup.
  skill           Install or update the matching plugin-builder skill.
  release         Release candidate, rehearsal, publication, and verification.

Global options
  -h, --help
      Show help for the selected path and exit.
  -V, --version
      Print the CLI version and exit.
      --json
      Emit one schemaVersion-1 JSON envelope on stdout.
      --home <path>
      Override the Explodex home directory. (default: $HOME/.explodex)
      --dev-root <path>
      Override the isolated development root. (default: <home>/dev/plugin-dev)
      --timeout <duration>
      Application-level bound for the operation (for example 60s).
      --no-color
      Disable ANSI color even on a TTY.

Environment
  EXPLODEX_HOME       Default Explodex home ($HOME/.explodex)
  EXPLODEX_DEV_ROOT   Default development root (<home>/dev/plugin-dev)
  NO_COLOR            Disable color when present
  TERM=dumb           Disable color and terminal decoration

Compatibility
  Host: read-only /Applications/ChatGPT.app only.
  Ports: main 127.0.0.1:9333, isolated development 127.0.0.1:9444.
  Prove compatibility with: explodex compatibility probe

Main recovery
  Explodex never automatically restarts or debug-relaunches an existing authoring main.
  Provide a manual debug-enabled main on 127.0.0.1:9333, then use
  explodex main apply <artifact> only after isolated-dev validation.

Examples
  explodex host report
  explodex --json compatibility status
  explodex help plugin

More information
  explodex help <group>
  explodex <group> <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 2`] = `
"Usage
  explodex [GLOBAL OPTIONS] <GROUP> <COMMAND> [ARGUMENTS] [OPTIONS]
  explodex help [GROUP [COMMAND ...]]

Description
  Explodex manages trusted plugins for the installed read-only
  /Applications/ChatGPT.app with bounded one-shot operations.

  Explodex runs no daemon and never automatically restarts, reloads,
  navigates, closes, or stops an existing authoring main.

Groups
  host            Read-only ChatGPT.app identity and host evidence.
  compatibility   Exact compatibility key status and isolated proof.
  main            Authoring-main classification, launch, attach, and final apply.
  plugin          Plugin authoring, artifacts, lifecycle, and registry operations.
  dev             One persistent isolated development instance on 127.0.0.1:9444.
  legacy          Legacy doctor and exact itemized cleanup.
  skill           Install or update the matching plugin-builder skill.
  release         Release candidate, rehearsal, publication, and verification.

Global options
  -h, --help
      Show help for the selected path and exit.
  -V, --version
      Print the CLI version and exit.
      --json
      Emit one schemaVersion-1 JSON envelope on stdout.
      --home <path>
      Override the Explodex home directory. (default: $HOME/.explodex)
      --dev-root <path>
      Override the isolated development root. (default: <home>/dev/plugin-dev)
      --timeout <duration>
      Application-level bound for the operation (for example 60s).
      --no-color
      Disable ANSI color even on a TTY.

Environment
  EXPLODEX_HOME       Default Explodex home ($HOME/.explodex)
  EXPLODEX_DEV_ROOT   Default development root (<home>/dev/plugin-dev)
  NO_COLOR            Disable color when present
  TERM=dumb           Disable color and terminal decoration

Compatibility
  Host: read-only /Applications/ChatGPT.app only.
  Ports: main 127.0.0.1:9333, isolated development 127.0.0.1:9444.
  Prove compatibility with: explodex compatibility probe

Main recovery
  Explodex never automatically restarts or debug-relaunches an existing authoring main.
  Provide a manual debug-enabled main on 127.0.0.1:9333, then use
  explodex main apply <artifact> only after isolated-dev validation.

Examples
  explodex host report
  explodex --json compatibility status
  explodex help plugin

More information
  explodex help <group>
  explodex <group> <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 3`] = `
"Usage
  explodex host <command> [arguments] [options]

Description
  Read-only ChatGPT.app identity and host evidence.

Commands
  report                Read-only canonical host identity and separate compatibility summary.
      Aliases: inspect
  extract               Copy only requested allowlisted host evidence to the private inspection cache. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex host report

More information
  explodex help host <command>
  explodex host <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 4`] = `
"Usage
  explodex host <command> [arguments] [options]

Description
  Read-only ChatGPT.app identity and host evidence.

Commands
  report                Read-only canonical host identity and separate compatibility summary.
      Aliases: inspect
  extract               Copy only requested allowlisted host evidence to the private inspection cache. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex host report

More information
  explodex help host <command>
  explodex host <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 5`] = `
"Usage
  explodex host report

Summary
  Read-only canonical host identity and separate compatibility summary.
  Aliases: inspect

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host report
  explodex --json host report

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 6`] = `
"Usage
  explodex host report

Summary
  Read-only canonical host identity and separate compatibility summary.
  Aliases: inspect

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host report
  explodex --json host report

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 7`] = `
"Usage
  explodex host report

Summary
  Read-only canonical host identity and separate compatibility summary.
  Aliases: inspect

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host report
  explodex --json host report

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 8`] = `
"Usage
  explodex host report

Summary
  Read-only canonical host identity and separate compatibility summary.
  Aliases: inspect

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host report
  explodex --json host report

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 9`] = `
"Usage
  explodex host extract --path <path>...

Summary
  Copy only requested allowlisted host evidence to the private inspection cache.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --path <path>...
      Allowlisted host evidence path. (required; repeatable)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host extract --path <path>...
  explodex --json host extract --path <path>...

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 10`] = `
"Usage
  explodex host extract --path <path>...

Summary
  Copy only requested allowlisted host evidence to the private inspection cache.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --path <path>...
      Allowlisted host evidence path. (required; repeatable)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex host extract --path <path>...
  explodex --json host extract --path <path>...

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 11`] = `
"Usage
  explodex compatibility <command> [arguments] [options]

Description
  Exact compatibility key status and isolated proof.

Commands
  status                Read-only exact compatibility key and status.
      Aliases: report
  probe                 Complete isolated-development proof on 9444; persist only one complete result. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex compatibility status

More information
  explodex help compatibility <command>
  explodex compatibility <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 12`] = `
"Usage
  explodex compatibility <command> [arguments] [options]

Description
  Exact compatibility key status and isolated proof.

Commands
  status                Read-only exact compatibility key and status.
      Aliases: report
  probe                 Complete isolated-development proof on 9444; persist only one complete result. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex compatibility status

More information
  explodex help compatibility <command>
  explodex compatibility <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 13`] = `
"Usage
  explodex compatibility status

Summary
  Read-only exact compatibility key and status.
  Aliases: report

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility status
  explodex --json compatibility status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 14`] = `
"Usage
  explodex compatibility status

Summary
  Read-only exact compatibility key and status.
  Aliases: report

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility status
  explodex --json compatibility status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 15`] = `
"Usage
  explodex compatibility status

Summary
  Read-only exact compatibility key and status.
  Aliases: report

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility status
  explodex --json compatibility status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 16`] = `
"Usage
  explodex compatibility status

Summary
  Read-only exact compatibility key and status.
  Aliases: report

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility status
  explodex --json compatibility status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 17`] = `
"Usage
  explodex compatibility probe

Summary
  Complete isolated-development proof on 9444; persist only one complete result.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility probe
  explodex --json compatibility probe

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 18`] = `
"Usage
  explodex compatibility probe

Summary
  Complete isolated-development proof on 9444; persist only one complete result.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex compatibility probe
  explodex --json compatibility probe

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 19`] = `
"Usage
  explodex main <command> [arguments] [options]

Description
  Authoring-main classification, launch, attach, and final apply.

Commands
  status                Read-only main classification and separate 9333 obstruction.
  launch                Strict explicit launch only from no-main, free 9333, and current proof. (reserved)
  attach                Bounded operation against a manually supplied exact 9333 main. (reserved)
  apply                 Final hot-safe apply after exact dev validation and fresh main authorization. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex main status

More information
  explodex help main <command>
  explodex main <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 20`] = `
"Usage
  explodex main <command> [arguments] [options]

Description
  Authoring-main classification, launch, attach, and final apply.

Commands
  status                Read-only main classification and separate 9333 obstruction.
  launch                Strict explicit launch only from no-main, free 9333, and current proof. (reserved)
  attach                Bounded operation against a manually supplied exact 9333 main. (reserved)
  apply                 Final hot-safe apply after exact dev validation and fresh main authorization. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex main status

More information
  explodex help main <command>
  explodex main <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 21`] = `
"Usage
  explodex main status

Summary
  Read-only main classification and separate 9333 obstruction.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main status
  explodex --json main status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 22`] = `
"Usage
  explodex main status

Summary
  Read-only main classification and separate 9333 obstruction.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main status
  explodex --json main status

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 23`] = `
"Usage
  explodex main launch

Summary
  Strict explicit launch only from no-main, free 9333, and current proof.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main launch
  explodex --json main launch

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 24`] = `
"Usage
  explodex main launch

Summary
  Strict explicit launch only from no-main, free 9333, and current proof.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main launch
  explodex --json main launch

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 25`] = `
"Usage
  explodex main attach

Summary
  Bounded operation against a manually supplied exact 9333 main.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main attach
  explodex --json main attach

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 26`] = `
"Usage
  explodex main attach

Summary
  Bounded operation against a manually supplied exact 9333 main.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main attach
  explodex --json main attach

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 27`] = `
"Usage
  explodex main apply <artifact>

Summary
  Final hot-safe apply after exact dev validation and fresh main authorization.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  artifact        Path to a validated plugin artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main apply <artifact>
  explodex --json main apply <artifact>

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 28`] = `
"Usage
  explodex main apply <artifact>

Summary
  Final hot-safe apply after exact dev validation and fresh main authorization.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  artifact        Path to a validated plugin artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex main apply <artifact>
  explodex --json main apply <artifact>

Recovery
  Run explodex compatibility probe on the exact owned 9444 development target.
  Provide a manual debug-enabled main on 127.0.0.1:9333 when final apply is required.
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 29`] = `
"Usage
  explodex plugin <command> [arguments] [options]

Description
  Plugin authoring, artifacts, lifecycle, and registry operations.

Commands
  create                Create a safe generated-only plugin workspace.
  validate              Validate a plugin workspace source contract.
  build                 Build browser-safe plugin artifacts into dist/.
  package               Package a validated plugin artifact archive.
  artifact validate     Validate a standalone packaged plugin artifact.
  install               Atomically install a prebuilt plugin archive disabled and pending review.
      Aliases: add
  status                Show installed, pending, and enabled plugin state.
  refresh               Discover installed plugins and present pending review when required.
  review                Present metadata-only review for pending plugins.
  update check          Check for available plugin updates without applying them.
  update apply          Apply selected plugin updates after review.
  disable               Disable an installed plugin without removing its bytes. (reserved)
  remove                Remove an installed plugin identity. (reserved)
  onboard               First-run registry onboarding for disabled installation choices. (reserved)
  develop               Foreground plugin build/watch against the exact owned development instance. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex plugin create

More information
  explodex help plugin <command>
  explodex plugin <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 30`] = `
"Usage
  explodex plugin <command> [arguments] [options]

Description
  Plugin authoring, artifacts, lifecycle, and registry operations.

Commands
  create                Create a safe generated-only plugin workspace.
  validate              Validate a plugin workspace source contract.
  build                 Build browser-safe plugin artifacts into dist/.
  package               Package a validated plugin artifact archive.
  artifact validate     Validate a standalone packaged plugin artifact.
  install               Atomically install a prebuilt plugin archive disabled and pending review.
      Aliases: add
  status                Show installed, pending, and enabled plugin state.
  refresh               Discover installed plugins and present pending review when required.
  review                Present metadata-only review for pending plugins.
  update check          Check for available plugin updates without applying them.
  update apply          Apply selected plugin updates after review.
  disable               Disable an installed plugin without removing its bytes. (reserved)
  remove                Remove an installed plugin identity. (reserved)
  onboard               First-run registry onboarding for disabled installation choices. (reserved)
  develop               Foreground plugin build/watch against the exact owned development instance. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex plugin create

More information
  explodex help plugin <command>
  explodex plugin <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 31`] = `
"Usage
  explodex plugin create <directory>

Summary
  Create a safe generated-only plugin workspace.

Arguments
  directory       Target directory for the new workspace. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin create <directory>
  explodex --json plugin create <directory>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 32`] = `
"Usage
  explodex plugin create <directory>

Summary
  Create a safe generated-only plugin workspace.

Arguments
  directory       Target directory for the new workspace. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin create <directory>
  explodex --json plugin create <directory>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 33`] = `
"Usage
  explodex plugin validate [workspace]

Summary
  Validate a plugin workspace source contract.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin validate [workspace]
  explodex --json plugin validate [workspace]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 34`] = `
"Usage
  explodex plugin validate [workspace]

Summary
  Validate a plugin workspace source contract.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin validate [workspace]
  explodex --json plugin validate [workspace]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 35`] = `
"Usage
  explodex plugin build [workspace]

Summary
  Build browser-safe plugin artifacts into dist/.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin build [workspace]
  explodex --json plugin build [workspace]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 36`] = `
"Usage
  explodex plugin build [workspace]

Summary
  Build browser-safe plugin artifacts into dist/.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin build [workspace]
  explodex --json plugin build [workspace]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 37`] = `
"Usage
  explodex plugin package [workspace] [--output <directory>]

Summary
  Package a validated plugin artifact archive.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
      --output <directory>
      Directory for the packaged archive.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin package [workspace] [--output <directory>]
  explodex --json plugin package [workspace] [--output <directory>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 38`] = `
"Usage
  explodex plugin package [workspace] [--output <directory>]

Summary
  Package a validated plugin artifact archive.

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
      --output <directory>
      Directory for the packaged archive.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin package [workspace] [--output <directory>]
  explodex --json plugin package [workspace] [--output <directory>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 39`] = `
"Usage
  explodex plugin artifact validate <path>

Summary
  Validate a standalone packaged plugin artifact.

Arguments
  path            Path to the packaged artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin artifact validate <path>
  explodex --json plugin artifact validate <path>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 40`] = `
"Usage
  explodex plugin artifact validate <path>

Summary
  Validate a standalone packaged plugin artifact.

Arguments
  path            Path to the packaged artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin artifact validate <path>
  explodex --json plugin artifact validate <path>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 41`] = `
"Usage
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Atomically install a prebuilt plugin archive disabled and pending review.
  Aliases: add

Arguments
  archive         Local prebuilt .tar.gz or .tgz plugin archive. (optional)

Options
      --registry <id>
      Install an exact plugin ID from the configured registry.
      --github-url <url>
      Install from one canonical immutable GitHub release URL.
      --archive-sha256 <hex>
      Expected lowercase SHA-256 of exact archive bytes.
      --payload-sha256 <hex>
      Optional expected lowercase canonical payload SHA-256.
      --target <role>
      Review target role; unavailable targets leave the install disabled and pending. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 42`] = `
"Usage
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Atomically install a prebuilt plugin archive disabled and pending review.
  Aliases: add

Arguments
  archive         Local prebuilt .tar.gz or .tgz plugin archive. (optional)

Options
      --registry <id>
      Install an exact plugin ID from the configured registry.
      --github-url <url>
      Install from one canonical immutable GitHub release URL.
      --archive-sha256 <hex>
      Expected lowercase SHA-256 of exact archive bytes.
      --payload-sha256 <hex>
      Optional expected lowercase canonical payload SHA-256.
      --target <role>
      Review target role; unavailable targets leave the install disabled and pending. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 43`] = `
"Usage
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Atomically install a prebuilt plugin archive disabled and pending review.
  Aliases: add

Arguments
  archive         Local prebuilt .tar.gz or .tgz plugin archive. (optional)

Options
      --registry <id>
      Install an exact plugin ID from the configured registry.
      --github-url <url>
      Install from one canonical immutable GitHub release URL.
      --archive-sha256 <hex>
      Expected lowercase SHA-256 of exact archive bytes.
      --payload-sha256 <hex>
      Optional expected lowercase canonical payload SHA-256.
      --target <role>
      Review target role; unavailable targets leave the install disabled and pending. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 44`] = `
"Usage
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Atomically install a prebuilt plugin archive disabled and pending review.
  Aliases: add

Arguments
  archive         Local prebuilt .tar.gz or .tgz plugin archive. (optional)

Options
      --registry <id>
      Install an exact plugin ID from the configured registry.
      --github-url <url>
      Install from one canonical immutable GitHub release URL.
      --archive-sha256 <hex>
      Expected lowercase SHA-256 of exact archive bytes.
      --payload-sha256 <hex>
      Optional expected lowercase canonical payload SHA-256.
      --target <role>
      Review target role; unavailable targets leave the install disabled and pending. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin install [archive] [--registry <id>] [--github-url <url>] [--archive-sha256 <hex>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 45`] = `
"Usage
  explodex plugin status [id]

Summary
  Show installed, pending, and enabled plugin state.

Arguments
  id              Optional exact plugin ID. (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin status [id]
  explodex --json plugin status [id]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 46`] = `
"Usage
  explodex plugin status [id]

Summary
  Show installed, pending, and enabled plugin state.

Arguments
  id              Optional exact plugin ID. (optional)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin status [id]
  explodex --json plugin status [id]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 47`] = `
"Usage
  explodex plugin refresh [--target <role>]

Summary
  Discover installed plugins and present pending review when required.

Arguments
  None.

Options
      --target <role>
      Review target role; unavailable targets never force a renderer. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin refresh [--target <role>]
  explodex --json plugin refresh [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 48`] = `
"Usage
  explodex plugin refresh [--target <role>]

Summary
  Discover installed plugins and present pending review when required.

Arguments
  None.

Options
      --target <role>
      Review target role; unavailable targets never force a renderer. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin refresh [--target <role>]
  explodex --json plugin refresh [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 49`] = `
"Usage
  explodex plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Present metadata-only review for pending plugins.

Arguments
  id              Optional exact plugin ID. (optional)

Options
      --artifact-version <opaque-version>
      Exact opaque artifact version when one ID has multiple identities.
      --payload-sha256 <hex>
      Exact lowercase payload SHA-256.
      --target <role>
      Review target role (main or development). (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 50`] = `
"Usage
  explodex plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Present metadata-only review for pending plugins.

Arguments
  id              Optional exact plugin ID. (optional)

Options
      --artifact-version <opaque-version>
      Exact opaque artifact version when one ID has multiple identities.
      --payload-sha256 <hex>
      Exact lowercase payload SHA-256.
      --target <role>
      Review target role (main or development). (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin review [id] [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 51`] = `
"Usage
  explodex plugin update check

Summary
  Check for available plugin updates without applying them.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin update check
  explodex --json plugin update check
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 52`] = `
"Usage
  explodex plugin update check

Summary
  Check for available plugin updates without applying them.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin update check
  explodex --json plugin update check
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 53`] = `
"Usage
  explodex plugin update apply [--target <role>]

Summary
  Apply selected plugin updates after review.

Arguments
  None.

Options
      --target <role>
      Review/application target role. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin update apply [--target <role>]
  explodex --json plugin update apply [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 54`] = `
"Usage
  explodex plugin update apply [--target <role>]

Summary
  Apply selected plugin updates after review.

Arguments
  None.

Options
      --target <role>
      Review/application target role. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin update apply [--target <role>]
  explodex --json plugin update apply [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 55`] = `
"Usage
  explodex plugin disable <id> [--target <role>]

Summary
  Disable an installed plugin without removing its bytes.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  id              Exact plugin ID. (required)

Options
      --target <role>
      Optional live teardown target role. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin disable <id> [--target <role>]
  explodex --json plugin disable <id> [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 56`] = `
"Usage
  explodex plugin disable <id> [--target <role>]

Summary
  Disable an installed plugin without removing its bytes.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  id              Exact plugin ID. (required)

Options
      --target <role>
      Optional live teardown target role. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin disable <id> [--target <role>]
  explodex --json plugin disable <id> [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 57`] = `
"Usage
  explodex plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Remove an installed plugin identity.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  id              Exact plugin ID. (required)

Options
      --artifact-version <opaque-version>
      Exact opaque artifact version when multiple identities exist.
      --payload-sha256 <hex>
      Exact lowercase payload SHA-256.
      --target <role>
      Optional live teardown target role. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 58`] = `
"Usage
  explodex plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]

Summary
  Remove an installed plugin identity.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  id              Exact plugin ID. (required)

Options
      --artifact-version <opaque-version>
      Exact opaque artifact version when multiple identities exist.
      --payload-sha256 <hex>
      Exact lowercase payload SHA-256.
      --target <role>
      Optional live teardown target role. (values: none|main|development; default: none)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
  explodex --json plugin remove <id> [--artifact-version <opaque-version>] [--payload-sha256 <hex>] [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 59`] = `
"Usage
  explodex plugin onboard [--target <role>]

Summary
  First-run registry onboarding for disabled installation choices.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --target <role>
      Review target role. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin onboard [--target <role>]
  explodex --json plugin onboard [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 60`] = `
"Usage
  explodex plugin onboard [--target <role>]

Summary
  First-run registry onboarding for disabled installation choices.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --target <role>
      Review target role. (values: main|development; default: main)
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin onboard [--target <role>]
  explodex --json plugin onboard [--target <role>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 61`] = `
"Usage
  explodex plugin develop [workspace] [--sdk-source <path>]

Summary
  Foreground plugin build/watch against the exact owned development instance.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
      --sdk-source <path>
      Explicit canonical local SDK source workspace.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin develop [workspace] [--sdk-source <path>]
  explodex --json plugin develop [workspace] [--sdk-source <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 62`] = `
"Usage
  explodex plugin develop [workspace] [--sdk-source <path>]

Summary
  Foreground plugin build/watch against the exact owned development instance.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  workspace       Plugin workspace path (default: cwd). (optional)

Options
      --sdk-source <path>
      Explicit canonical local SDK source workspace.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex plugin develop [workspace] [--sdk-source <path>]
  explodex --json plugin develop [workspace] [--sdk-source <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 63`] = `
"Usage
  explodex dev <command> [arguments] [options]

Description
  One persistent isolated development instance on 127.0.0.1:9444.

Commands
  status                Check health, ownership, crash state, and the next safe action.
  start                 Start the stopped development instance once.
  ensure                Reuse, safely recover if confirmed dead, or start the development instance once.
  recover               Explicitly recover a failed or interrupted development record.
  inject                Inject an artifact into the owned development instance.
  restart               Restart only the exact owned development process once.
  stop                  Stop only the exact owned development process.
  focus                 Focus the owned development instance when exact process-specific activation is supported.

Shared options
  See global options: explodex --help

Examples
  explodex dev status

More information
  explodex help dev <command>
  explodex dev <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 64`] = `
"Usage
  explodex dev <command> [arguments] [options]

Description
  One persistent isolated development instance on 127.0.0.1:9444.

Commands
  status                Check health, ownership, crash state, and the next safe action.
  start                 Start the stopped development instance once.
  ensure                Reuse, safely recover if confirmed dead, or start the development instance once.
  recover               Explicitly recover a failed or interrupted development record.
  inject                Inject an artifact into the owned development instance.
  restart               Restart only the exact owned development process once.
  stop                  Stop only the exact owned development process.
  focus                 Focus the owned development instance when exact process-specific activation is supported.

Shared options
  See global options: explodex --help

Examples
  explodex dev status

More information
  explodex help dev <command>
  explodex dev <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 65`] = `
"Usage
  explodex dev status

Summary
  Check health, ownership, crash state, and the next safe action.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev status
  explodex --json dev status
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 66`] = `
"Usage
  explodex dev status

Summary
  Check health, ownership, crash state, and the next safe action.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev status
  explodex --json dev status
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 67`] = `
"Usage
  explodex dev start

Summary
  Start the stopped development instance once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev start
  explodex --json dev start
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 68`] = `
"Usage
  explodex dev start

Summary
  Start the stopped development instance once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev start
  explodex --json dev start
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 69`] = `
"Usage
  explodex dev ensure

Summary
  Reuse, safely recover if confirmed dead, or start the development instance once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev ensure
  explodex --json dev ensure
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 70`] = `
"Usage
  explodex dev ensure

Summary
  Reuse, safely recover if confirmed dead, or start the development instance once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev ensure
  explodex --json dev ensure
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 71`] = `
"Usage
  explodex dev recover

Summary
  Explicitly recover a failed or interrupted development record.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev recover
  explodex --json dev recover
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 72`] = `
"Usage
  explodex dev recover

Summary
  Explicitly recover a failed or interrupted development record.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev recover
  explodex --json dev recover
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 73`] = `
"Usage
  explodex dev inject <artifact>

Summary
  Inject an artifact into the owned development instance.

Arguments
  artifact        Path to a validated plugin artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev inject <artifact>
  explodex --json dev inject <artifact>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 74`] = `
"Usage
  explodex dev inject <artifact>

Summary
  Inject an artifact into the owned development instance.

Arguments
  artifact        Path to a validated plugin artifact. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev inject <artifact>
  explodex --json dev inject <artifact>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 75`] = `
"Usage
  explodex dev restart

Summary
  Restart only the exact owned development process once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev restart
  explodex --json dev restart
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 76`] = `
"Usage
  explodex dev restart

Summary
  Restart only the exact owned development process once.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev restart
  explodex --json dev restart
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 77`] = `
"Usage
  explodex dev stop

Summary
  Stop only the exact owned development process.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev stop
  explodex --json dev stop
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 78`] = `
"Usage
  explodex dev stop

Summary
  Stop only the exact owned development process.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev stop
  explodex --json dev stop
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 79`] = `
"Usage
  explodex dev focus

Summary
  Focus the owned development instance when exact process-specific activation is supported.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev focus
  explodex --json dev focus
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 80`] = `
"Usage
  explodex dev focus

Summary
  Focus the owned development instance when exact process-specific activation is supported.

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex dev focus
  explodex --json dev focus
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 81`] = `
"Usage
  explodex legacy <command> [arguments] [options]

Description
  Legacy doctor and exact itemized cleanup.

Commands
  doctor                Report legacy install state. (reserved)
  cleanup               Remove exact itemized legacy items. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help legacy

More information
  explodex help legacy <command>
  explodex legacy <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 82`] = `
"Usage
  explodex legacy <command> [arguments] [options]

Description
  Legacy doctor and exact itemized cleanup.

Commands
  doctor                Report legacy install state. (reserved)
  cleanup               Remove exact itemized legacy items. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help legacy

More information
  explodex help legacy <command>
  explodex legacy <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 83`] = `
"Usage
  explodex legacy doctor

Summary
  Report legacy install state.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex legacy doctor
  explodex --json legacy doctor
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 84`] = `
"Usage
  explodex legacy doctor

Summary
  Report legacy install state.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex legacy doctor
  explodex --json legacy doctor
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 85`] = `
"Usage
  explodex legacy cleanup --item <item-id>... [--yes]

Summary
  Remove exact itemized legacy items.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --item <item-id>...
      Exact legacy item ID selected for cleanup. (required; repeatable)
      --yes
      Confirm the exact submitted item list.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex legacy cleanup --item <item-id>... [--yes]
  explodex --json legacy cleanup --item <item-id>... [--yes]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 86`] = `
"Usage
  explodex legacy cleanup --item <item-id>... [--yes]

Summary
  Remove exact itemized legacy items.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --item <item-id>...
      Exact legacy item ID selected for cleanup. (required; repeatable)
      --yes
      Confirm the exact submitted item list.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex legacy cleanup --item <item-id>... [--yes]
  explodex --json legacy cleanup --item <item-id>... [--yes]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 87`] = `
"Usage
  explodex skill <command> [arguments] [options]

Description
  Install or update the matching plugin-builder skill.

Commands
  install               Install the matching plugin-builder skill. (reserved)
  update                Update the installed plugin-builder skill. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help skill

More information
  explodex help skill <command>
  explodex skill <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 88`] = `
"Usage
  explodex skill <command> [arguments] [options]

Description
  Install or update the matching plugin-builder skill.

Commands
  install               Install the matching plugin-builder skill. (reserved)
  update                Update the installed plugin-builder skill. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help skill

More information
  explodex help skill <command>
  explodex skill <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 89`] = `
"Usage
  explodex skill install [--skill-home <path>]

Summary
  Install the matching plugin-builder skill.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --skill-home <path>
      Explicit skill installation root.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex skill install [--skill-home <path>]
  explodex --json skill install [--skill-home <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 90`] = `
"Usage
  explodex skill install [--skill-home <path>]

Summary
  Install the matching plugin-builder skill.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --skill-home <path>
      Explicit skill installation root.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex skill install [--skill-home <path>]
  explodex --json skill install [--skill-home <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 91`] = `
"Usage
  explodex skill update [--skill-home <path>]

Summary
  Update the installed plugin-builder skill.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --skill-home <path>
      Explicit skill installation root.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex skill update [--skill-home <path>]
  explodex --json skill update [--skill-home <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 92`] = `
"Usage
  explodex skill update [--skill-home <path>]

Summary
  Update the installed plugin-builder skill.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
      --skill-home <path>
      Explicit skill installation root.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex skill update [--skill-home <path>]
  explodex --json skill update [--skill-home <path>]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 93`] = `
"Usage
  explodex release <command> [arguments] [options]

Description
  Release candidate, rehearsal, publication, and verification.

Commands
  candidate             Create a release candidate. (reserved)
  rehearse              Rehearse publication without public mutation. (reserved)
  publish               Publish an exact authorized candidate. (reserved)
  verify                Verify a published candidate. (reserved)
  status                Show candidate-ready versus release-complete status. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help release

More information
  explodex help release <command>
  explodex release <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 94`] = `
"Usage
  explodex release <command> [arguments] [options]

Description
  Release candidate, rehearsal, publication, and verification.

Commands
  candidate             Create a release candidate. (reserved)
  rehearse              Rehearse publication without public mutation. (reserved)
  publish               Publish an exact authorized candidate. (reserved)
  verify                Verify a published candidate. (reserved)
  status                Show candidate-ready versus release-complete status. (reserved)

Shared options
  See global options: explodex --help

Examples
  explodex help release

More information
  explodex help release <command>
  explodex release <command> --help
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 95`] = `
"Usage
  explodex release candidate

Summary
  Create a release candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release candidate
  explodex --json release candidate
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 96`] = `
"Usage
  explodex release candidate

Summary
  Create a release candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  None.

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release candidate
  explodex --json release candidate
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 97`] = `
"Usage
  explodex release rehearse <candidate>

Summary
  Rehearse publication without public mutation.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release rehearse <candidate>
  explodex --json release rehearse <candidate>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 98`] = `
"Usage
  explodex release rehearse <candidate>

Summary
  Rehearse publication without public mutation.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release rehearse <candidate>
  explodex --json release rehearse <candidate>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 99`] = `
"Usage
  explodex release publish <candidate> [--yes]

Summary
  Publish an exact authorized candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
      --yes
      Confirm publication of this exact candidate.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release publish <candidate> [--yes]
  explodex --json release publish <candidate> [--yes]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 100`] = `
"Usage
  explodex release publish <candidate> [--yes]

Summary
  Publish an exact authorized candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
      --yes
      Confirm publication of this exact candidate.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release publish <candidate> [--yes]
  explodex --json release publish <candidate> [--yes]
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 101`] = `
"Usage
  explodex release verify <candidate>

Summary
  Verify a published candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release verify <candidate>
  explodex --json release verify <candidate>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 102`] = `
"Usage
  explodex release verify <candidate>

Summary
  Verify a published candidate.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release verify <candidate>
  explodex --json release verify <candidate>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 103`] = `
"Usage
  explodex release status <candidate>

Summary
  Show candidate-ready versus release-complete status.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release status <candidate>
  explodex --json release status <candidate>
"
`;

exports[`frozen CLI descriptor and help graph snapshots root, every group, and every command help form 104`] = `
"Usage
  explodex release status <candidate>

Summary
  Show candidate-ready versus release-complete status.
  Status: reserved for a later milestone (not executable in this release).

Arguments
  candidate       Exact release candidate path. (required)

Options
  No command-local options.
  Global options are accepted anywhere before --; see explodex --help.

Output
  Human mode writes the primary result to stdout and diagnostics to stderr.
  --json writes one schemaVersion-1 envelope to stdout.

Exit status
  0 success, 1 operational failure, 2 usage error, 3 blocked, 4 busy, 5 timeout, 130 interrupted

Examples
  explodex release status <candidate>
  explodex --json release status <candidate>
"
`;
